--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-trello",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Trello app. ",
-  "main": "index.js",
+  "main": "public/js/index.js",
   "scripts": {
     "mkdir": "mkdir -p build",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
@@ -52,6 +52,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "chokidar": "^1.6.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
