--- a/package.json
+++ b/package.json
@@ -53,9 +53,13 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
     "chokidar": "^1.6.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
+    "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.1",
     "uglify-js": "^2.7.3",
     "webpack": "^1.13.2"
   }
