--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trello",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Trello app. ",
   "main": "public/js/index.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
+    "chai-shallow-deep-equal": "^1.4.0",
     "chokidar": "^1.6.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
