--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trello",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Trello app. ",
   "main": "public/js/index.js",
   "scripts": {
@@ -48,7 +48,8 @@
   "dependencies": {
     "normalize.css": "^4.2.0",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
