--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trello",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "Trello app. ",
   "main": "public/js/index.js",
   "scripts": {
@@ -47,15 +47,18 @@
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "dependencies": {
     "normalize.css": "^4.2.0",
+    "normalizr": "^2.2.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "seamless-immutable": "^6.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
