--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
   "name": "react-trello",
-  "version": "1.2.0",
-  "description": "Trello app. ",
+  "description": "Trello app.",
+  "version": "1.2.1",
+  "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
+  "keywords": [
+    "React",
+    "Trello"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jayzamazing/react-trello.git"
+  },
+  "author": "Adrian J Lopez <adrianjaylopez@gmail.com>",
+  "contributors": [],
+  "bugs": {
+    "url": "https://github.com/jayzamazing/react-trello/issues"
+  },
+  "engines": {
+    "node": ">= 0.12.0"
+  },
   "scripts": {
-    "test": "mocha --compilers js:babel-register test/**/*.js*",
+    "test": "npm run jshint && npm run mocha",
+    "jshint": "jshint src/. test/. --config",
+    "start": "node src/",
+    "mocha": "mocha --compilers js:babel-register test/ --recursive",
     "mkdir": "mkdir -p build",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
@@ -31,31 +52,35 @@
     "watch:js:minified": "npm run build:js:minified && webpack --watch --minify",
     "clean:js:minified": "rm -f build/$npm_package_name.$npm_package_version.min.js build/$npm_package_name.$npm_package_version.min.js.map"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jayzamazing/react-trello.git"
-  },
-  "keywords": [
-    "React",
-    "Trello"
-  ],
-  "author": "Adrian J Lopez <adrianjaylopez@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jayzamazing/react-trello/issues"
-  },
-  "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
+    "feathers": "^2.0.2",
+    "feathers-authentication": "^0.7.10",
+    "feathers-configuration": "^0.2.3",
+    "feathers-errors": "^2.4.0",
+    "feathers-hooks": "^1.5.7",
+    "feathers-mongoose": "^3.5.2",
+    "feathers-rest": "^1.5.0",
+    "feathers-socketio": "^1.4.1",
+    "mongoose": "^4.6.1",
     "normalize.css": "^4.2.0",
     "normalizr": "^2.2.1",
+    "passport": "^0.3.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "seamless-immutable": "^6.1.1"
+    "seamless-immutable": "^6.1.1",
+    "serve-favicon": "^2.3.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
+    "jshint": "^2.9.3",
+    "mocha": "^3.0.2",
+    "request": "^2.75.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
@@ -67,7 +92,6 @@
     "chokidar": "^1.6.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
-    "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.3.1",
     "uglify-js": "^2.7.3",
     "webpack": "^1.13.2"
