--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
   "keywords": [
@@ -56,6 +56,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
+    "denormalizr": "^0.3.2",
     "feathers": "^2.0.2",
     "feathers-authentication": "^0.7.10",
     "feathers-configuration": "^0.2.3",
