--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
   "keywords": [
@@ -76,6 +76,7 @@
     "redux-thunk": "^2.1.0",
     "seamless-immutable": "^6.1.1",
     "serve-favicon": "^2.3.0",
+    "superagent": "^2.3.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
