Added chai-http to package.json. Changed cardslist type to string and ref cardslist in src/services/board/board-model.js and /cardslist/cardslist-model.js. Changed populate to get and find in src/services/board/hooks/index.js and cardslist/hooks/index.js. Started working on test/services/board/index.test.js, added before and after sections.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
   "keywords": [
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai-http": "^3.0.0",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "feathers": "^2.0.2",
