--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
   "keywords": [
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "test": "npm run jshint && npm run mocha",
-    "jshint": "jshint src/. test/. --config",
+    "jshint": "eslint src/. test/.",
     "start": "node src/",
     "mocha": "mocha --compilers js:babel-register test/ --recursive",
     "mkdir": "mkdir -p build",
@@ -90,7 +90,8 @@
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.0",
     "chokidar": "^1.6.0",
-    "jshint": "^2.9.3",
+    "eslint": "^3.7.0",
+    "eslint-plugin-react": "^6.3.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
     "mocha": "^3.0.2",
