--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "feathers-rest": "^1.5.0",
     "feathers-socketio": "^1.4.1",
     "mongoose": "^4.6.1",
-    "normalize.css": "^4.2.0",
     "normalizr": "^2.2.1",
     "passport": "^0.3.2",
     "react": "^15.3.1",
@@ -90,6 +89,7 @@
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.0",
     "chokidar": "^1.6.0",
+    "chokidar-cli": "^1.2.0",
     "eslint": "^3.7.0",
     "eslint-plugin-react": "^6.3.0",
     "less": "^2.7.1",
