Added script to run individual tests in package.json, updated reducer test to start using tempstate and updates to request bodies and assertions, and updated reducers to use switch statement for actions.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jshint": "eslint src/. test/.",
     "start": "node src/",
     "mocha": "mocha --compilers js:babel-register test/ --recursive",
+    "mochaIndividual": "mocha --compilers js:babel-register --require test/front-end/utils/dom.js",
     "mkdir": "mkdir -p build",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
