--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "1.20.16",
+  "version": "1.20.18",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "public/js/index.js",
   "keywords": [
@@ -54,54 +54,54 @@
     "clean:js:minified": "rm -f build/$npm_package_name.$npm_package_version.min.js build/$npm_package_name.$npm_package_version.min.js.map"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "chai-http": "^3.0.0",
-    "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "feathers": "^2.0.2",
-    "feathers-authentication": "^0.7.10",
-    "feathers-configuration": "^0.2.3",
-    "feathers-errors": "^2.4.0",
-    "feathers-hooks": "^1.5.7",
-    "feathers-mongoose": "^3.5.2",
-    "feathers-rest": "^1.5.0",
-    "feathers-socketio": "^1.4.1",
-    "mongoose": "^4.6.1",
-    "normalizr": "^2.2.1",
-    "passport": "^0.3.2",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "seamless-immutable": "^6.1.1",
-    "serve-favicon": "^2.3.0",
-    "superagent": "^2.3.0",
-    "winston": "^2.2.0"
+    "body-parser": "1.15.2",
+    "chai-http": "3.0.0",
+    "compression": "1.6.2",
+    "cors": "2.8.1",
+    "feathers": "2.0.2",
+    "feathers-authentication": "0.7.10",
+    "feathers-configuration": "0.2.3",
+    "feathers-errors": "2.4.0",
+    "feathers-hooks": "1.5.7",
+    "feathers-mongoose": "3.5.2",
+    "feathers-rest": "1.5.0",
+    "feathers-socketio": "1.4.1",
+    "mongoose": "4.6.1",
+    "normalizr": "2.2.1",
+    "passport": "0.3.2",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
+    "react-redux": "4.4.5",
+    "react-router": "2.8.1",
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
+    "seamless-immutable": "7.1.2",
+    "serve-favicon": "2.3.0",
+    "superagent": "2.3.0",
+    "winston": "2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.14.0",
-    "chai": "^3.5.0",
-    "chai-shallow-deep-equal": "^1.4.0",
-    "chokidar": "^1.6.0",
-    "chokidar-cli": "^1.2.0",
-    "eslint": "^3.7.0",
-    "eslint-plugin-react": "^6.3.0",
-    "jsdom": "^9.8.3",
-    "less": "^2.7.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "mocha": "^3.0.2",
-    "nock": "^8.0.0",
-    "react-addons-test-utils": "^15.3.1",
-    "redux-mock-store": "^1.2.1",
-    "request": "^2.75.0",
-    "uglify-js": "^2.7.3",
-    "webpack": "^1.13.2"
+    "babel-core": "6.14.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "babel-register": "6.14.0",
+    "chai": "3.5.0",
+    "chai-shallow-deep-equal": "1.4.0",
+    "chokidar": "1.6.0",
+    "chokidar-cli": "1.2.0",
+    "eslint": "3.7.0",
+    "eslint-plugin-react": "6.3.0",
+    "jsdom": "9.8.3",
+    "less": "2.7.1",
+    "less-plugin-clean-css": "1.5.1",
+    "mocha": "3.0.2",
+    "nock": "8.0.0",
+    "react-addons-test-utils": "15.3.1",
+    "redux-mock-store": "1.2.1",
+    "request": "2.75.0",
+    "uglify-js": "2.7.3",
+    "webpack": "1.13.2"
   }
 }
