Updated user model to use email. Updated travis to use build for the time being. Updated feathers-authentication to 0.7.12 to deal with restrict-to-owner bug that was fixed. Added test to create user in test/services/user/index.test.js.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     packages:
     - mongodb-org-server
 before_script:
-- npm run postinstall
+- npm run build
 deploy:
   provider: heroku
   api_key:
