--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "feathers-configuration": "0.2.3",
     "feathers-errors": "2.4.0",
     "feathers-hooks": "1.5.7",
+    "feathers-localstorage": "0.4.1",
     "feathers-mongoose": "3.5.2",
     "feathers-rest": "1.5.0",
     "feathers-socketio": "1.4.1",
