--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Trello app.",
   "version": "2.0.0",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
-  "main": "public/js/index.js",
+  "main": "client.js",
   "keywords": [
     "React",
     "Trello"
@@ -56,6 +56,7 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "chai-http": "3.0.0",
+    "express": "^4.14.0",
     "mongoose": "4.6.1",
     "normalizr": "2.2.1",
     "passport": "0.3.2",
@@ -71,9 +72,10 @@
   "devDependencies": {
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
-    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-plugin-react-html-attrs": "2.0.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
+    "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.14.0",
     "chai": "3.5.0",
     "chai-shallow-deep-equal": "1.4.0",
@@ -81,13 +83,16 @@
     "chokidar-cli": "1.2.0",
     "eslint": "3.7.0",
     "eslint-plugin-react": "6.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jsdom": "9.8.3",
     "less": "2.7.1",
+    "less-loader": "2.2.3",
     "less-plugin-clean-css": "1.5.1",
     "mocha": "3.0.2",
     "nock": "8.0.0",
     "react-addons-test-utils": "15.3.1",
     "redux-mock-store": "1.2.1",
+    "style-loader": "0.13.1",
     "uglify-js": "2.7.3",
     "webpack": "1.13.2"
   }
