Fixed locations in package.json and removed css build tasks because they should be taken care of by webpack. Added icon for trello. Added dom testing utils under test folder.

--- a/package.json
+++ b/package.json
@@ -27,31 +27,24 @@
     "start": "node src/",
     "mocha": "mocha --compilers js:babel-register test/ --recursive",
     "mochaIndividual": "mocha --compilers js:babel-register --require test/front-end/utils/dom.js",
-    "mkdir": "mkdir -p build",
-    "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
+    "mkdir": "mkdir -p src/static/css src/static/js",
+    "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:js",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
-    "clean": "rm -rf build",
-    "build:html": "npm run clean:html && cp public/index.html build/ && cp public/favicon.ico build/",
-    "watch:html": "npm run build:html && chokidar public/index.html -c 'npm run build:html'",
-    "clean:html": "rm -f build/index.html",
-    "build:css": "npm run build:css:unminified && npm run build:css:minified",
-    "watch:css": "npm run watch:css:unminified & npm run watch:css:minified",
-    "clean:css": "npm run clean:css:unminified && npm run clean:css:minified",
-    "build:css:unminified": "npm run clean:css:unminified && lessc --source-map public/css/index.less build/$npm_package_name.$npm_package_version.css",
-    "watch:css:unminified": "npm run build:css:unminified && chokidar 'public/css/**/*.(css|less)' -c 'npm run build:css:unminified'",
-    "clean:css:unminified": "rm -f build/$npm_package_name.$npm_package_version.css build/$npm_package_name.$npm_package_version.css.map",
-    "build:css:minified": "npm run clean:css:minified && lessc --clean-css --source-map public/css/index.less build/$npm_package_name.$npm_package_version.min.css",
-    "watch:css:minified": "npm run build:css:minified && chokidar 'public/css/**/*.(css|less)' -c 'npm run build:css:minified'",
-    "clean:css:minified": "rm -f build/$npm_package_name.$npm_package_version.min.css build/$npm_package_name.$npm_package_version.min.css.map",
+    "clean": "rm -rf src/static/*",
+    "build:html": "npm run clean:html && cp src/components/index.html src/static/ && cp src/components/favicon.ico src/static/",
+    "watch:html": "npm run build:html && chokidar src/components/index.html -c 'npm run build:html'",
+    "clean:html": "rm -f src/static/index.html",
+    "clean:css:unminified": "rm -f src/static/css/$npm_package_name.$npm_package_version.css src/static/css/$npm_package_name.$npm_package_version.css.map",
+    "clean:css:minified": "rm -f src/static/css/$npm_package_name.$npm_package_version.min.css src/static/css/$npm_package_name.$npm_package_version.min.css.map",
     "build:js": "npm run build:js:unminified && npm run build:js:minified",
     "watch:js": "npm run watch:js:unminified & npm run watch:js:minified",
-    "clean:js": "npm run clean:js:unminified && npm run clean:js:minified",
+    "clean:js": "npm run clean:css:unminified && npm run clean:js:unminified && npm run clean:js:minified",
     "build:js:unminified": "npm run clean:js:unminified && webpack",
     "watch:js:unminified": "npm run build:js:unminified && webpack --watch",
-    "clean:js:unminified": "rm -f build/$npm_package_name.$npm_package_version.js build/$npm_package_name.$npm_package_version.js.map",
-    "build:js:minified": "npm run clean:js:minified && webpack --minify",
+    "clean:js:unminified": "rm -f src/static/js/$npm_package_name.$npm_package_version.js src/static/js/$npm_package_name.$npm_package_version.js.map",
+    "build:js:minified": "npm run clean:css:minified && npm run clean:js:minified && webpack --minify",
     "watch:js:minified": "npm run build:js:minified && webpack --watch --minify",
-    "clean:js:minified": "rm -f build/$npm_package_name.$npm_package_version.min.js build/$npm_package_name.$npm_package_version.min.js.map"
+    "clean:js:minified": "rm -f src/static/js/$npm_package_name.$npm_package_version.min.js src/static/js/$npm_package_name.$npm_package_version.min.js.map"
   },
   "dependencies": {
     "body-parser": "1.15.2",
