Readded .babelrc for use in tests and babel-spread operator to package.json. Made mongoose use global promises in app.js and added closeServer function. Minor fix in schemas. Started working on post for users in server.js. Added user service test and started working on it.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jshint": "eslint src/. test/.",
     "start": "node src/server/app.js",
     "mocha": "mocha --compilers js:babel-register test/ --recursive",
-    "mochaIndividual": "mocha --compilers js:babel-register --require test/front-end/utils/dom.js",
+    "mochaIndividual": "mocha --compilers js:babel-register --require test/utils/dom.js",
     "mkdir": "mkdir -p src/static/css src/static/js",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:js",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
@@ -67,6 +67,7 @@
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-html-attrs": "2.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-react-hmre": "1.1.1",
