--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "client.js",
   "server": "app.js",
@@ -80,6 +80,7 @@
     "eslint": "3.7.0",
     "eslint-plugin-react": "6.3.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "faker": "^4.1.0",
     "jsdom": "9.8.3",
     "less": "2.7.1",
     "less-loader": "2.2.3",
