--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "client.js",
   "server": "app.js",
@@ -48,14 +48,17 @@
     "clean:js:minified": "rm -rf src/server/app.js && rm -f src/static/js/$npm_package_name.$npm_package_version.min.js src/static/js/$npm_package_name.$npm_package_version.min.js.map"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "1.15.2",
     "chai-http": "3.0.0",
-    "express": "^4.14.0",
+    "express": "4.14.0",
     "mongoose": "4.6.1",
+    "morgan": "1.8.2",
     "normalizr": "2.2.1",
     "passport": "0.3.2",
+    "passport-http": "0.3.0",
     "react": "15.3.1",
-    "react-dom": "^15.3.1",
+    "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "react-router": "2.8.1",
     "redux": "3.6.0",
@@ -67,7 +70,7 @@
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-html-attrs": "2.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-react-hmre": "1.1.1",
@@ -76,7 +79,7 @@
     "chai-shallow-deep-equal": "1.4.0",
     "chokidar": "1.6.0",
     "chokidar-cli": "1.2.0",
-    "cross-env": "^5.0.1",
+    "cross-env": "5.0.1",
     "eslint": "3.7.0",
     "eslint-plugin-react": "6.3.0",
     "extract-text-webpack-plugin": "1.0.1",
@@ -92,6 +95,6 @@
     "style-loader": "0.13.1",
     "uglify-js": "2.7.3",
     "webpack": "1.13.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "1.6.0"
   }
 }
