--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "client.js",
   "server": "app.js",
@@ -23,29 +23,29 @@
     "node": ">= 0.12.0"
   },
   "scripts": {
-    "test": "npm run jshint && npm run mocha",
-    "jshint": "eslint src/. test/.",
-    "start": "node src/server/app.js",
+    "test": "npm run eslint && npm run mocha",
+    "eslint": "eslint src/. test/.",
+    "start": "node build/server/app.js",
     "mocha": "mocha --compilers js:babel-register test/ --recursive",
     "mochaIndividual": "mocha --compilers js:babel-register --require test/utils/dom.js",
-    "mkdir": "mkdir -p src/static/css src/static/js",
+    "mkdir": "mkdir -p build/static/css build/static/js",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:js",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
-    "clean": "rm -rf src/static/* && rm -rf src/server/*",
-    "build:html": "npm run clean:html && cp src/components/index.html src/static/ && cp src/components/favicon.ico src/static/",
+    "clean": "rm -rf build/static/* && rm -rf build/server/*",
+    "build:html": "npm run clean:html && cp src/components/index.html build/static/ && cp src/components/favicon.ico build/static/",
     "watch:html": "npm run build:html && chokidar src/components/index.html -c 'npm run build:html'",
-    "clean:html": "rm -f src/static/index.html",
-    "clean:css:unminified": "rm -f src/static/css/$npm_package_name.$npm_package_version.css src/static/css/$npm_package_name.$npm_package_version.css.map",
-    "clean:css:minified": "rm -f src/static/css/$npm_package_name.$npm_package_version.min.css src/static/css/$npm_package_name.$npm_package_version.min.css.map",
+    "clean:html": "rm -f build/static/index.html",
+    "clean:css:unminified": "rm -f build/static/css/$npm_package_name.$npm_package_version.css build/static/css/$npm_package_name.$npm_package_version.css.map",
+    "clean:css:minified": "rm -f build/static/css/$npm_package_name.$npm_package_version.min.css build/static/css/$npm_package_name.$npm_package_version.min.css.map",
     "build:js": "npm run build:js:unminified && npm run build:js:minified",
     "watch:js": "npm run watch:js:unminified & npm run watch:js:minified",
     "clean:js": "npm run clean:css:unminified && npm run clean:js:unminified && npm run clean:js:minified",
     "build:js:unminified": "npm run clean:js:unminified && webpack",
     "watch:js:unminified": "npm run build:js:unminified && webpack --watch",
-    "clean:js:unminified": "rm -rf src/server/app.js && rm -f src/static/js/$npm_package_name.$npm_package_version.js src/static/js/$npm_package_name.$npm_package_version.js.map",
+    "clean:js:unminified": "rm -rf build/server/app.js && rm -f build/static/js/$npm_package_name.$npm_package_version.js && rm -f build/static/js/$npm_package_name.$npm_package_version.js.map",
     "build:js:minified": "npm run clean:css:minified && npm run clean:js:minified && webpack --minify",
     "watch:js:minified": "npm run build:js:minified && webpack --watch --minify",
-    "clean:js:minified": "rm -rf src/server/app.js && rm -f src/static/js/$npm_package_name.$npm_package_version.min.js src/static/js/$npm_package_name.$npm_package_version.min.js.map"
+    "clean:js:minified": "rm -rf build/server/app.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js.map"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
