Moved some of the mocha parameters to the mocha.opts file in test. Fix to the closeServer function in app.js. Disabled/modified some routes for the time being. Moved passport to server.js file and edited some routes. Reorganized tests for auth and users. Added app.test.js under test to test loading of index page.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-trello",
   "description": "Trello app.",
-  "version": "2.4.1",
+  "version": "2.5.2",
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "main": "client.js",
   "server": "app.js",
@@ -26,7 +26,7 @@
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/.",
     "start": "node build/server/app.js",
-    "mocha": "mocha --compilers js:babel-register test/ --recursive",
+    "mocha": "mocha test/",
     "mochaIndividual": "mocha --compilers js:babel-register --require test/utils/dom.js",
     "mkdir": "mkdir -p build/static/css build/static/js",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:js",
@@ -48,7 +48,7 @@
     "clean:js:minified": "rm -rf build/server/app.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js.map"
   },
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcrypt": "1.0.2",
     "body-parser": "1.15.2",
     "chai-http": "3.0.0",
     "express": "4.14.0",
@@ -83,12 +83,12 @@
     "eslint": "3.7.0",
     "eslint-plugin-react": "6.3.0",
     "extract-text-webpack-plugin": "1.0.1",
-    "faker": "^4.1.0",
+    "faker": "4.1.0",
     "jsdom": "9.8.3",
     "less": "2.7.1",
     "less-loader": "2.2.3",
     "less-plugin-clean-css": "1.5.1",
-    "mocha": "3.0.2",
+    "mocha": "3.4.2",
     "nock": "8.0.0",
     "react-addons-test-utils": "15.3.1",
     "redux-mock-store": "1.2.1",
