--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "body-parser": "1.15.2",
     "chai-http": "3.0.0",
     "express": "4.14.0",
+    "express-session": "^1.15.3",
     "mongoose": "4.6.1",
     "morgan": "1.8.2",
     "normalizr": "2.2.1",
