Readded the rest of the front-end react files and tests. Front-end test mostly disabled until I modify them for backend implementation. Started working on actions and actions test, finished create boards in both.

--- a/package.json
+++ b/package.json
@@ -90,9 +90,9 @@
     "less-loader": "2.2.3",
     "less-plugin-clean-css": "1.5.1",
     "mocha": "3.4.2",
-    "nock": "8.0.0",
+    "nock": "^8.0.0",
     "react-addons-test-utils": "15.3.1",
-    "redux-mock-store": "1.2.1",
+    "redux-mock-store": "^1.2.3",
     "style-loader": "0.13.1",
     "uglify-js": "2.7.3",
     "webpack": "1.13.2",
