Separated project into back-end and client projects. The back-end redone using express app generator.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "react-trello",
-  "description": "Trello app.",
-  "version": "2.34.10",
+  "name": "react-trello-backend",
+  "version": "3.0.0",
+  "private": true,
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
-  "main": "client.js",
-  "server": "app.js",
-  "keywords": [
-    "React",
-    "Trello"
-  ],
+  "scripts": {
+    "start": "node ./bin/www",
+    "mongod": "mongod --dbpath=/Users/adrianlopez/Documents/mongo-data --nojournal --rest $@",
+    "test": "npm run eslint && npm run mocha",
+    "eslint": "eslint test/.",
+    "mocha": "mocha test/ --recursive"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,83 +20,26 @@
   "bugs": {
     "url": "https://github.com/jayzamazing/react-trello/issues"
   },
-  "engines": {
-    "node": ">= 0.12.0"
-  },
-  "scripts": {
-    "test": "npm run eslint && npm run mocha",
-    "eslint": "eslint src/. test/.",
-    "start": "node build/server/app.js",
-    "mocha": "mocha test/ src/",
-    "mochaIndividual": "mocha --compilers js:babel-register --require test/utils/dom.js",
-    "mkdir": "mkdir -p build/static/css build/static/js",
-    "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:js",
-    "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
-    "clean": "rm -rf build/static/* && rm -rf build/server/*",
-    "build:html": "npm run clean:html && cp src/components/index.html build/static/ && cp src/components/favicon.ico build/static/",
-    "watch:html": "npm run build:html && chokidar src/components/index.html -c 'npm run build:html'",
-    "clean:html": "rm -f build/static/index.html",
-    "clean:css:unminified": "rm -f build/static/css/$npm_package_name.$npm_package_version.css build/static/css/$npm_package_name.$npm_package_version.css.map",
-    "clean:css:minified": "rm -f build/static/css/$npm_package_name.$npm_package_version.min.css build/static/css/$npm_package_name.$npm_package_version.min.css.map",
-    "build:js": "npm run build:js:unminified && npm run build:js:minified",
-    "watch:js": "npm run watch:js:unminified & npm run watch:js:minified",
-    "clean:js": "npm run clean:css:unminified && npm run clean:js:unminified && npm run clean:js:minified",
-    "build:js:unminified": "npm run clean:js:unminified && webpack",
-    "watch:js:unminified": "npm run build:js:unminified && webpack --watch",
-    "clean:js:unminified": "rm -rf build/server/app.js && rm -f build/static/js/$npm_package_name.$npm_package_version.js && rm -f build/static/js/$npm_package_name.$npm_package_version.js.map",
-    "build:js:minified": "npm run clean:css:minified && npm run clean:js:minified && webpack --minify",
-    "watch:js:minified": "npm run build:js:minified && webpack --watch --minify",
-    "clean:js:minified": "rm -rf build/server/app.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js && rm -f build/static/js/$npm_package_name.$npm_package_version.min.js.map"
-  },
   "dependencies": {
-    "bcrypt": "1.0.2",
-    "body-parser": "1.15.2",
-    "chai-http": "3.0.0",
-    "express": "4.14.0",
-    "express-session": "^1.15.3",
-    "mongoose": "4.6.1",
-    "morgan": "1.8.2",
-    "normalizr": "2.2.1",
-    "passport": "0.3.2",
-    "passport-http": "0.3.0",
-    "react": "15.3.1",
-    "react-dom": "15.3.1",
-    "react-redux": "4.4.5",
-    "react-router": "2.8.1",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "seamless-immutable": "7.1.2",
-    "winston": "2.2.0"
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "express-session": "^1.15.5",
+    "mongoose": "^4.11.11",
+    "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "serve-favicon": "~2.4.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "6.14.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-react-html-attrs": "2.0.0",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.14.0",
-    "chai": "3.5.0",
-    "chai-shallow-deep-equal": "1.4.0",
-    "chokidar": "1.6.0",
-    "chokidar-cli": "1.2.0",
-    "cross-env": "5.0.1",
-    "eslint": "3.7.0",
-    "eslint-plugin-react": "6.3.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "faker": "4.1.0",
-    "jsdom": "9.8.3",
-    "less": "2.7.1",
-    "less-loader": "2.2.3",
-    "less-plugin-clean-css": "1.5.1",
-    "mocha": "3.4.2",
-    "nock": "^8.0.0",
-    "react-addons-test-utils": "15.3.1",
-    "redux-mock-store": "^1.2.3",
-    "style-loader": "0.13.1",
-    "uglify-js": "2.7.3",
-    "webpack": "1.13.2",
-    "webpack-node-externals": "1.6.0"
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "eslint": "^4.7.1",
+    "faker": "^4.1.0",
+    "mocha": "^3.5.3"
   }
 }
