--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trello-backend",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "private": true,
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "scripts": {
@@ -25,12 +25,15 @@
     "body-parser": "^1.18.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
+    "passport-jwt": "^3.0.0",
     "serve-favicon": "~2.4.2",
     "winston": "^2.3.1"
   },
