--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-trello-backend",
-  "version": "3.4.2",
+  "version": "3.5.2",
   "private": true,
   "homepage": "https://github.com/jayzamazing/react-trello#readme",
   "scripts": {
     "start": "node ./bin/www",
+    "inspect": "node --inspect ./bin/www",
     "mongod": "mongod --dbpath=/Users/adrianlopez/Documents/mongo-data --nojournal --rest $@",
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint test/.",
